# parallel_evolution-lib

./: .gitignore  Makefile  Makefile.am  README  configure.ac  lstodo
config/: parallel_evolution.conf
doc/: execution.md
docs/: burndown.ods
include/: algorithm.h  common.h  migrant.h  mpi_util.h  parallel_evolution.h  population.h  processes.h  topology.h
include/parallel_evolution/: algorithm.h  config.h  log.h  mpi_util.h  population.h  processes.h  report.h  topology.h  topology_parser.h
src/: Makefile.am  algorithm.c  config.c  log.c  main_bfo.c  migrant.c  mpi_util.c  parallel_evolution.c  population.c  processes.c  report.c  topology.c  topology_parser.c
